--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
             body {
                 margin: 0;
             }
+            iframe {
+                border: none;
+            }
         </style>
     </head>
     <body>
