--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         </style>
     </head>
     <body>
+        <h1>Hi There!</h1>
+        <p>It's the dev here. i just want to say thanks for using this.</p>
         <iframe src="https://bing.com"></iframe>
         <script>
             let f = document.querySelector("iframe");
