--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
         </style>
     </head>
     <body>
-        <h1>Hi There!</h1>
-        <p>It's the dev here. i just want to say thanks for using this.</p>
         <iframe src="https://bing.com"></iframe>
         <script>
             let f = document.querySelector("iframe");
-            f.width = window.innerWidth;
-            f.height = window.innerHeight;
+            function resize() {
+                f.width = window.innerWidth;
+                f.height = window.innerHeight;
+            }
+            window.onresize = resize
+            resize();
         </script>
     </body>
 </html>
